# ribbon-bridge-interfaces

./: CMakeLists.txt  commontypes.proto  daemon.proto  dongle.proto  gen-daemon.pb.cpp  gen-daemon.pb.hpp  gen-dongle.pb.cpp  gen-dongle.pb.hpp  gen-robot.pb.cpp  gen-robot.pb.hpp  robot.proto
